2010-01-06  Dirk Schulze  <krit@webkit.org>

        Reviewed by Nikolas Zimmermann.

        SVG feImage support
        https://bugs.webkit.org/show_bug.cgi?id=31905

        Update SVG status page. We support feDisplacementMap and feImage now.

        * projects/svg/status.xml:

2009-12-20  Chris Jerdonek  <chris.jerdonek@gmail.com>

        Reviewed by Darin Adler.

        Removed outdated contact information from bug life cycle page.
        
        https://bugs.webkit.org/show_bug.cgi?id=32494

        * quality/lifecycle.html:

2009-12-13  Dan Bernstein  <mitz@apple.com>

        Reviewed by Sam Weinig.

        Add a style guideline concerning floating point literals
        https://bugs.webkit.org/show_bug.cgi?id=32497

        * coding/coding-style.html:

2009-12-09  Marwan Al Jubeh  <marwan.aljubeh@gmail.com>

        Reviewed by Adam Roben.

        Fixes: https://bugs.webkit.org/show_bug.cgi?id=31228
        Set the WebKitOutputDir, WebKitLibrariesDir and Cygwin environment variables automatically
        in Windows as part of running update_webkit.

        * building/build.html:
         - removed the reference to forgetting to set environment variables as a common source of errors
           on Windows. This is because this patch would make it unnecessary for the user to set these
           variables manually.

2009-12-09  Chris Jerdonek  <chris.jerdonek@gmail.com>

        Reviewed by Darin Adler.

        Added the "using std::foo" rule to the coding style guidelines.
        
        https://bugs.webkit.org/show_bug.cgi?id=32301
        
        Added to the coding style guidelines the "using std::foo" rule
        checked by the check-webkit-style script.  Also clarified the
        "using" statement guidelines that apply to implementation files.

        * coding/coding-style.html:

2009-12-05  Chris Jerdonek  <chris.jerdonek@gmail.com>

        Reviewed by Darin Adler.

        Refactored web site documentation so that advice to add