@@ -1,3 +1,11 @@
+2010-01-11  Maciej Stachowiak  <mjs@apple.com>
+
+        Not reviewed; updated for truth (and readability).
+
+        Fixed some wrong listings and reorganized this page.
+
+        * security/security-group-members.html:
+
 2010-01-06  Dirk Schulze  <krit@webkit.org>
 
         Reviewed by Nikolas Zimmermann.
